Updates to the tutorial.

--- a/tutorial/mybib.bib
+++ b/tutorial/mybib.bib
@@ -12,6 +12,14 @@
   year = {2010}
 }
 
+@inproceedings{DSLExtract,
+  author = {Andy Gill},
+  title = {Type-Safe Observable Sharing in {H}askell},
+  booktitle = {Proceedings of the 2009 {ACM} {SIGPLAN} {H}askell Symposium},
+  year = {2009},
+  month = {September}
+}
+
 @book{PeytonJones02,
   editor = {Simon Peyton Jones},
   howpublished = {PDF},
