--- a/tutorial/copilot_tutorial.tex
+++ b/tutorial/copilot_tutorial.tex
@@ -282,8 +282,8 @@ $s_{fib} = \{0, 1, 1, 2, 3, 5, 8, 13, 21, \dots \}$
 \end{center}
 
 \noindent We denote the $n$th value of the stream $s$ as $s(n)$, and the first
-value in a sequence $s$ as $s(0)$. For example, for $s_{fib}$ we have that $s_{fib}(0) = 1$,
-$s_{fib}(1) = 1$, $s_{fib}(2) = 2$, and so forth.
+value in a sequence $s$ as $s(0)$. For example, for $s_{fib}$ we have that $s_{fib}(0) = 0$,
+$s_{fib}(1) = 1$, $s_{fib}(2) = 1$, and so forth.
 
 Constants as well as arithmetic, boolean, and relational operators are
 lifted to work pointwise on streams:
@@ -573,110 +573,99 @@ can be cast to signed types at least as large.
 \label{sec:interacting}
 
 All interaction with the outside world is done by sampling \emph{external
-  variables} and by evoking \emph{triggers}.  External variables are variables
-that are defined outside Copilot and which reflect the visible state of the
-target program that we are monitoring.  Analogously, triggers are functions that
-are defined outside Copilot and which are evoked when Copilot needs to report
-that the target program has violated a specification constraint.
+  symbols} and by evoking \emph{triggers}.  External symbols are symbols that
+are defined outside Copilot and which reflect the visible state of the target
+program that we are monitoring.  They include variables, arrays, and functions
+(with a non-void return type).  Analogously, triggers are functions that are
+defined outside Copilot and which are evoked when Copilot needs to report that
+the target program has violated a specification constraint.
+
+\subsubsection{Sampling}
+A Copilot specification is \emph{open} if defined with external symbols in the
+sense that values must be provided externally at runtime.  To simplify writing
+Copilot specifications that can be interpreted and tested, constructs for
+external symbols take an optional environment for interpretation.
 
 External variables are defined by using the {\tt extern} construct:
 %
 \begin{code}
-extern :: Typed a => String -> Stream a
+extern :: Typed a => String -> Maybe [a] -> Stream a
 \end{code}
 %
 \noindent
-It takes the name of an external variable and generates a stream by sampling
-the variable at each clock cycle.  For example, 
+It takes the name of an external variable, a possible Haskell list to serve as
+the environment for the interpreter, and generates a stream by sampling the
+variable at each clock cycle.  For example,
 %
 \begin{code}
 sumExterns :: Stream Word64
-sumExterns = let ex1 = extern "e1"
-                 ex2 = extern "e2"
+sumExterns = let ex1 = extern "e1" (Just [0..])
+                 ex2 = extern "e2" Nothing
              in  ex1 + ex2
 \end{code}
 %
 is a stream that takes two external variables {\tt e1} and {\tt e2} and adds
-them.  Sometimes, type inference cannot infer the type of an external variable.  For
+them.  The first external variable contains the infinite list {\tt [0,1,2,...]}
+of values for use when interpreting a Copilot specification containing the
+stream.  The other variable contains no environment ({\tt sumExterns} must have
+an environment for both of its variables to be interpreted).
+
+Sometimes, type inference cannot infer the type of an external variable.  For
 example, in the stream definition
 %
 \begin{code}
 extEven :: Stream Bool
-extEven = extern "x" `mod` 2 == 0
+extEven = e0 `mod` 2 == 0
+  where e0 = externW8 "x" Nothing 
 \end{code}
 %
-the type of {\tt extern "x"} is ambiguous.  For convenience, typed {\tt extern}
-functions are provided, e.g., {\tt externW8} or {\tt externI64} denoting an
-external unsigned 8-bit word or signed 64-bit word, respectively.
-
-Triggers are defined by using the {\tt trigger construct}:
+\noindent
+the type of {\tt extern "x"} is ambiguous, since it cannot be inferred from a
+Boolean stream and we have not given an explicit type signature.  For
+convenience, typed {\tt extern} functions are provided, e.g., {\tt externW8} or
+{\tt externI64} denoting an external unsigned 8-bit word or signed 64-bit word,
+respectively.  In general it is best practice to define external symbols with
+top-level definitions, e.g.,
 %
 \begin{code}
-trigger :: String -> Stream Bool -> [TriggerArg] -> Spec
+e0 :: Stream Word8
+e0 = extern  "e0" (Just [2,4..])
 \end{code}
-%
-The first parameter is the name of the external function, the second parameter is the
-guard which determines when the trigger should be evoked, and the third parameter
-is a list of arguments which is passed to the trigger when evoked.
-Triggers can be combined into a specification by using the \emph{do}-notation:
-%
-\begin{code}
-spec :: Spec
-spec = do
-  trigger "f" (even nats) [arg fib, arg (nats * nats)]
-  trigger "g" (fib > 10) []
-  let x = externW32 "x" 
-  trigger "h" (x < 10) [arg x]
-\end{code}
-%
-The order in which the triggers are defined is irrelevant.
 
-\begin{example}
-\label{exm:engine}
-We consider an engine controller with the following property:
-If the temperature rises more than 2.3 degrees within 0.2 seconds, then
-the engine should be shut off immediately.
-Assuming that the global sample rate is 0.2 seconds, we can define a monitor that
-surveys the above property:
-%
-\begin{code}
-propTempRiseShutOff :: Spec
-propTempRiseShutOff = trigger "over_temp_rise" (overTempRise ==> not running) []
-  where
-  temps        = [0, 0, 0] ++ (extern "temp" :: Stream Float)
-  overTempRise = drop 2 temps > const 2.3 + temps
-  running      = extern "running"
-
-\end{code}
-%
-Here, we assume that the external variable {\tt temp} denotes the temperature of the
-engine and the external variable {\tt running} indicates whether the engine is running.
-The external function {\tt over\_temp\_rise} is called without any arguments if the
-temperature rises more than 2.3 degrees within 0.2 seconds and the engine is not shut
-off.
-\end{example}
+\noindent
+so that the symbol name and its environment can be shared between streams.
 
 Besides variables, external arrays and arbitrary functions can be sampled.  The
 external array construct has the type
 %
 \begin{code}
 externArray :: (Typed a, Typed b, Integral a) 
-            => String -> Stream a -> Stream b  
+            => String -> Stream a -> Int -> Maybe [[a]] -> Stream b  
 \end{code}
 %
-The construct takes the name of an array and a stream that generates indexes for
-the array (of integral type).  For example,
+The construct takes (1) the name of an array, (2) a stream that generates indexes for
+the array (of integral type), (3) the fixed size of the array, and (4) possibly a list of lists that is the
+environment for the external array, representing the sequence of array values.  For example,
 %
 \begin{code}
+
 extArr :: Stream Word32
-extArr = externArray "arr1" arrIdx
+extArr = externArray "arr1" arrIdx size (Just $ repeat (permutations [0,1,2]))
   where 
   arrIdx :: Stream Word8
-  arrIdx = [0] ++ (arrIdx + 1) `mod` 4
-\end{code}
+  arrIdx = [0] ++ (arrIdx + 1) `mod` size
+
+  size = 3
+\end{code} 
+% $
 {\tt extArr} is a stream of values drawn from an external array containing
 32-bit unsigned words.  The array is indexed by an 8-bit variable.  The index
-is ensured to be less than four by using modulo arithmetic.
+is ensured to be less than three by using modulo arithmetic.  The environment
+provided produces an infinite list of all the permutations of the list {\tt
+  [0,1,2]}.\footnote{The function {\tt permutations} comes from the Haskell
+    standard library {\tt Data.list}.}
+
+
 %% %
 %% \begin{code}
 %% externArray :: (Typed a, Typed b, Integral a) => String -> Stream a -> Stream b
@@ -695,26 +684,25 @@ Say we have defined a lookup-table (in C99) of a discretized continuous function
 within Copilot:
 %
 \begin{code}
-double someTable[] = { 3.5, 3.7, 4.5, ... };
+double someTable[42] = { 3.5, 3.7, 4.5, ... };
 \end{code}
 %
 We can use the table in a Copilot specification as follows:
 %
 \begin{code}
-lookupSomeTable :: Stream Int -> Stream Stream Double
-lookupSomeTable k = externArray "someTable" k 
+lookupSomeTable :: Stream Word16 -> Stream Double
+lookupSomeTable idx = externArray "someTable" idx 42 Nothing
 \end{code}
 %
-Given the following values for \texttt{k}, $\{1, 0, 2, 2, 1, \dots \}$, the output of 
-\texttt{lookupSomeTable k} would be $\{3.7, 3.5, 4.5, 4.5, 3.7, \dots \}$.
+Given the following values for \texttt{idx}, $\{1, 0, 2, 2, 1, \dots \}$, the output of 
+\texttt{lookupSomeTable idx} would be $\{3.7, 3.5, 4.5, 4.5, 3.7, \dots \}$.
 \end{example}
 
-The constructor \texttt{externFun} also takes two arguments: the name of the
-external function and a list of arguments that are provided to the
-function. 
+Finally, the constructor \texttt{externFun} takes (1) a function name, (2) a
+list of arguments, and (3) a possible list of values to provide its environment.
 %
 \begin{code}
-externFun :: Typed a => String -> [FunArg] -> Stream a
+externFun :: Typed a => String -> [FunArg] -> Maybe [a] -> Stream a
 \end{code}
 %
 Each argument to an external function is given by a Copilot stream.  For
@@ -722,22 +710,87 @@ example,
 %
 \begin{code}
 func :: Stream Word16
-func = externFun "f" [funArg $ externW8 "x", funArg nats]
+func = externFun "f" [funArg e0, funArg nats] Nothing
   where
-  nats :: Stream Word16
+  externW8 "x" Nothing
+  nats :: Stream Word8
   nats = [0] ++ nats + 1
 \end{code} 
 % $
 samples a function in C that has the prototype
 %
 \begin{code}
-uint16_t f(uint8_t x, uint16_t nats);
+uint16_t f(uint8_t x, uint8_t nats);
+\end{code}
+% 
+
+Both external arrays and functions must, like external variables, be defined
+in the target program that is monitored. Additionally, external functions must be
+without side effects, so that the monitor does not cause undesired side-effects when
+sampling functions.  Finally, to ensure Copilot sampling is not
+order-dependent, external functions cannot contain streams containing other
+external functions or external arrays in their arguments, and external arrays
+cannot contain streams containing external functions or external arrays in their
+indexes.  They can both take external variables, however.
+
+\subsubsection{Triggers}
+Triggers, the only mechanism for Copilot streams to effect the outside world,
+are defined by using the {\tt trigger construct}:
+%
+\begin{code}
+trigger :: String -> Stream Bool -> [TriggerArg] -> Spec
 \end{code}
 %
-Both external arrays and functions must, like external variables, be defined in
-the target program that is monitored. Additionally external functions must be
-without side effects, as the monitor can cause undesired side-effects when
-calling the function.
+The first parameter is the name of the external function, the second parameter is the
+guard which determines when the trigger should be evoked, and the third parameter
+is a list of arguments which is passed to the trigger when evoked.
+Triggers can be combined into a specification by using the \emph{do}-notation:
+%
+\begin{code}
+spec :: Spec
+spec = do
+  trigger "f" (even nats) [arg fib, arg (nats * nats)]
+  trigger "g" (fib > 10) []
+  let x = externW32 "x" Nothing
+  trigger "h" (x < 10) [arg x]
+\end{code}
+%
+The order in which the triggers are defined is irrelevant.
+
+\begin{example}
+\label{exm:engine}
+We consider an engine controller with the following property: If the temperature
+rises more than 2.3 degrees within 0.2 seconds, then the fuel injector should
+not be running.  Assuming that the global sample rate is 0.1 seconds, we can
+define a monitor that surveys the above property:
+%
+\begin{code}
+propTempRiseShutOff :: Spec
+propTempRiseShutOff = trigger "over_temp_rise" (not (overTempRise && running)) []
+
+  where
+  max = 500 -- maximum engine temperature
+
+  temps :: Stream Float
+  temps = [max, max, max] ++ temp
+
+  temp = extern "temp" Nothing
+
+  overTempRise :: Stream Bool
+  overTempRise = drop 2 temps > (constant 2.3 + temps)
+ 
+  running :: Stream Bool
+  running = extern "running" Nothing
+\end{code}
+%
+
+Here, we assume that the external variable {\tt temp} denotes the temperature of
+the engine and the external variable {\tt running} indicates whether the fuel
+injector is running.  The external function {\tt over\_temp\_rise} is called
+without any arguments if the temperature rises more than 2.3 degrees within 0.2
+seconds and the engine is not shut off.
+\end{example}
+
 
 
 \subsection{Explicit Sharing}
@@ -800,34 +853,15 @@ time to interpret or compile.
 
 \subsection{Interpreting Copilot}
 
-Suppose we want to interpret the engine controller from Example \ref{exm:engine}.
-Before we can do so, we must define the external variables {\tt temp}
-and {\tt running} as infinite Haskell lists:
-%
-\begin{code}
-temp :: [Float]
-temp = map exp [0.2, 0.4 ..]
-
-running :: [Bool]
-running = repeat True
-\end{code}
-%
-We now evoke the interpreter as follows (e.g. in GHCI, the GHC compiler's
+The copilot interpreter is invoked as follows (e.g. within GHCI, the GHC compiler's
 interpreter for Haskell):
 %
 \begin{code}
-GHCI> interpret 10
-                [var "temp" temp, var "running" running]
-                propTempRiseShutOff
+GHCI> interpret 10 propTempRiseShutOff
 \end{code}
 %
 The first argument to the function \emph{interpret} is the number of iterations that we want to evaluate.
-The second argument is a list of inputs. Each input takes a name and an infinite list of
-values (which must conform to the type of the input). The third argument is the specification
-that we wish to interpret.
-
-If a Copilot program contains no external variables, then {\tt interpret} is
-given the empty list {\tt []}.
+The third argument is the specification (of type {\tt Spec}) that we wish to interpret.
 
 The interpreter outputs the values of the arguments passed to the trigger, if
 its guard is true, and {\tt --} otherwise.  For example, consider the following
@@ -844,7 +878,7 @@ are functions that take a stream and return whether the point-wise values are
 even or odd, respectively.  The output of 
 %
 \begin{code}
-interpret 10 [] spec
+interpret 10 spec
 \end{code}
 %
 is as follows:
@@ -864,58 +898,8 @@ trigger:   trigger2:
 \end{code}
 %
 
-
-In programs containing external arrays, an infinite \emph{list of lists} is
-given, simulating how the array changes in each tick.  For example, for a
-program containing an array {\tt arr} of unsigned 32-bit integers, of length
-four, we can define {\tt arrInterp} 
-%
-\begin{code}
-arrInterp :: [Word32]
-arrInterp = 
-  let shiftl ls = ls : shiftl (tail ls ++ [head ls]) in
-  shiftl [0..3]
-\end{code}
-%
-to generate the list 
-%
-\begin{code}
-[[0,1,2,3],[1,2,3,0],[2,3,0,1],[3,0,1,2] ... ]  
-\end{code}
-%
-We can then use {\tt arrInterp} as an input to simulate the program containing
-it.  
-%
-\begin{code}
-interpret 10 [ array "arr" arrInterp ] spec
-\end{code}
-%
-Note that the index into the array must not be greater than three!
-
-External functions can be modeled by a stream that simulates the
-behavior of the function.  for example, for an external function that takes an
-external variable and a Copilot stream as arguments
-%
-\begin{code}
-func :: Stream Word16
-func = externFun "f" [funArg $ externW8 "x", funArg nats]
-\end{code}
-% $
-we can define a stream that also takes an external variable {\tt x} that is an
-8-bit unsigned word and the stream {\tt nats}.  Suppose we decide that our simulation
-stream adds its two arguments.  To interpret the function, we call
-%
-\begin{code}
-x :: Word8
-x = [0..]
-
-interpret 10 [ func "func0" (cast (externW8 "x") + nats)
-             , var "x" x ] 
-          spec
-\end{code}
-
 Sometimes it is convenient to observe the behavior of a stream without defining
-a trigger.  We can do so by using an observer.  For example:
+a trigger.  We can do so declaring an \emph{observer}.  For example:
 %
 \begin{code}
 spec :: Spec
@@ -925,7 +909,7 @@ spec = observer ``obs'' nats
 can be interpreted using
 %
 \begin{code}
-interpret 5 [] spec  
+interpret 5 spec  
 \end{code}
 %
 as usual.  Observers can be combined in larger Copilot programs.  For example,
@@ -934,7 +918,7 @@ consider the following:
 \begin{code}
 spec :: Spec
 spec = do
-  let x = externW8 "x"
+  let x = externW8 "x" (Just [0..])
   trigger "trigger" true [arg $ x < 3]
   observer "debug_x" x
 \end{code}
@@ -942,7 +926,7 @@ spec = do
 Interpreting {\tt spec} as follows
 %
 \begin{code}
-interpret 10 [var "x" [0 :: Word8 ..]] foo  
+interpret 10 spec
 \end{code}
 %
 yields
@@ -960,6 +944,7 @@ trigger:  debug_x:
 (false)   8        
 (false)   9        
 \end{code}
+
 \subsection{Compiling Copilot}
 
 Compiling the engine controller from Example \ref{exm:engine} is
